--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ fastapi = "^0.115.5"
 langchain-openai = "^0.2.8"
 langchain-community = "^0.3.7"
 python-dotenv = "^1.0.1"
-
+chromadb = "^0.5.20"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
